src/assets/themes/default-template.css
/* ... */
/* Tree View */

.tree-view {
  overflow: scroll;
  box-sizing: border-box;
  padding: 10px;
  width: 100%;
  height: 100%;
}

.tree-view:focus {
  outline: none;
}

.tree-view .subtree {
  display: inline-block;
  min-width: 100%;
  outline: none;
}

.tree-view ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.tree-view ul ul {
  padding-left: 20px;
}

.tree-view .item {
  display: flex;
  flex-direction: row;
  white-space: nowrap;
}

.tree-view .item > * {
  position: relative;
  top: 2px;
}

.tree-view .jstree-ocl {
  position: relative;
  top: 0;
  width: 22px;
  cursor: pointer;
  color: var(--expander-color);
}

.tree-view .jstree-anchor {
  display: flex;
  flex-direction: row;
  flex: 1 1 auto;
  color: inherit;
}

.tree-view .jstree-node.selected {
  background-color: var(--tint-color1);
}

.tree-view .jstree-node.manually.node {
  outline: 1px dashed var(--system-blue);
}

.tree-view .jstree-node.manually.externproto,
.tree-view .jstree-node.manually.proto {
  outline: 1px dashed var(--system-indigo);
}

.tree-view .jstree-node.primary.externproto,
.tree-view .jstree-node.primary.proto {
    outline: 1px solid var(--system-indigo);
}

.tree-view .jstree-node.primary.node {
  outline: 1px solid var(--system-blue);
}

.tree-view .jstree-node.primary.field {
  outline: 1px solid var(--system-orange);
}

.tree-view .no-select {
  user-select: none;
}

/* Outline Editor */

.scene-graph {
  width: min-content;
}

.scene-graph .material-symbols-outlined {
  font-size: var(--font-size);
  position: relative;
  top: 2.5px;
  color: var(--system-blue);
}

.scene-graph .material-symbols-outlined:hover {
  color: var(--system-gray0);
}

.scene-graph .hidden {
  display: none;
}

.scene-graph .description .jstree-anchor {
  padding: 2px 0;
  font-size: smaller;
}

.scene-graph .not-started-state {
  color: var(--text-color);
}

.scene-graph .in-progress-state {
  color: var(--system-yellow);
}

.scene-graph .complete-state {
  color: var(--system-green);
}

.scene-graph .failed-state {
  color: var(--system-red);
}

.scene-graph .last {
  height: 0;
}

.scene-graph .last * {
  visibility: hidden;
}

.scene-graph .no-expand .jstree-ocl {
  visibility: hidden;
}

.scene-graph .description .jstree-ocl {
  display: none;
}

.scene-graph .icon {
  position: relative;
  top: 4px;
  margin-right: 5px;
  width: 16px;
  height: 12px;
}

.scene-graph .item * {
  vertical-align: top;
}

.scene-graph .item .node-type-name,
.scene-graph .item .as {
  font-weight: bold;
}

.scene-graph .name {
  position: relative;
  top: 2px;
  white-space: nowrap;
}

.scene-graph .externproto > .item  .name,
.scene-graph .proto > .item .name{
  color: var(--system-indigo);
}

.scene-graph .scene > .item .name {
  font-weight: bold;;
  font-style: italic;
  color: var(--system-purple);
}

.scene-graph .node > .item .name {
  color: var(--system-blue);
}

.scene-graph [node-id=NULL] > .item .name {
  color: var(--system-teal);
}

.scene-graph .imported-node > .item .name,
.scene-graph .exported-node > .item .name {
  color: var(--system-brown);
}

.scene-graph .exported-node > .item .boolean-button {
  top: 2px
}

.scene-graph .field > .item .name {
  color: var(--system-orange);
}

.scene-graph .field.user-defined > .item .name {
  font-weight: bold;
}

.scene-graph .field.references > .item .name {
  font-weight: bold;
  color: var(--system-brown);
}

.scene-graph .special > .item .name {
  font-style: italic;
  font-weight: bold;
  color: var(--system-purple);
}

.scene-graph .boolean-button {
  position: relative;
  margin-left: 10px;
  width: 28px;
  height: 12px;
  top: 4px;
}

.scene-graph .color-button {
  position: relative;
  box-sizing: border-box;
  margin-left: 10px;
  top: 4px;
  width: 12px;
  height: 12px;
  border: 1px solid var(--border-color);
  border-radius: 50%;
  background: var(--border-color);
}

.scene-graph .time-button {
  position: relative;
  margin-left: 10px;
  width: 12px;
  height: 12px;
  top: 4px;
}

.scene-graph .url-button {
  position: relative;
  top: 4px;
  margin-left: 10px;
  font-variation-settings: 'GRAD' 200;
}

.scene-graph .pointer {
  cursor: pointer;
}

.scene-graph .access-type {
  flex: 1 1 auto;
  overflow: hidden;
  position: relative;
  top: 4px;
  margin-left: 10px;
  min-width: 50px;
}

.scene-graph .route .access-type {
  top: 6px;
}

.scene-graph .access-type img.active {
  display: none;
  position: absolute;
  pointer-events: none;
}

.scene-graph .access-type img.active.activated {
  display: initial;
}

.scene-graph .access-type.inputOnly img.active.input,
.scene-graph .access-type.outputOnly img.active.output,
.scene-graph .access-type.inputOutput img.active.input,
.scene-graph .access-type.input img.active.input,
.scene-graph .access-type.output img.active.output {
  left: 0;
}

.scene-graph .access-type.inputOutput img.active.output {
  left: 14px;
}

.externproto area.input-selector,
.externproto area.output-selector,
.scene.instance-scene area.input-selector,
.scene.instance-scene area.output-selector,
.scene.internal-scene area.input-selector,
.scene.internal-scene area.output-selector {
  cursor: inherit;
}

.scene-graph .field-routes,
.scene-graph .single-route {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  pointer-events: none;
}

.scene-graph .route-curves-wrapper {
  position: relative;
  width: 40px;
}

.scene-graph .route-curves {
  position: absolute;
  top: -2px;
  width: 20px;
  height: 25px;
}

.scene-graph .field-value-container,
.scene-graph .special-value-container {
  flex: 1 1 auto;
}
/* ... */

